<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="placeholder_surface">%d sq m</string>
    <string name="placeholder_int">%d</string>

    <!-- Toolbar -->
    <string name="toolbar_properties_list">Properties list</string>
    <string name="toolbar_currency_converter">Currency converter</string>
    <string name="toolbar_loan_simulator">Loan simulator</string>
    <string name="toolbar_add_new_property">Add a new property</string>
    <string name="toolbar_search_property">Search property</string>
    <string name="toolbar_property_details">Property details</string>
    <string name="toolbar_edit_property">Edit property</string>
    <string name="toolbar_map_view">Map view</string>

    <!-- Property -->
    <string name="property_type">Type</string>
    <string name="property_district">District</string>
    <string name="property_price">Price</string>
    <string name="property_price_min">Minimum price</string>
    <string name="property_price_max">Maximum price</string>
    <string name="property_surface">Surface</string>
    <string name="property_surface_min">Minimum surface</string>
    <string name="property_surface_max">Maximum surface</string>
    <string name="property_available">Available</string>
    <string name="property_number_of_rooms">Number of rooms</string>
    <string name="property_number_of_rooms_min">Minimum rooms</string>
    <string name="property_number_of_rooms_max">Maximum rooms</string>
    <string name="property_number_of_bathrooms">Number of bathrooms</string>
    <string name="property_number_of_bedrooms">Number of bedrooms</string>
    <string name="property_rooms">Rooms</string>
    <string name="property_bathrooms">Bathrooms</string>
    <string name="property_bedrooms">Bedrooms</string>
    <string name="property_address">Address</string>
    <string name="property_address_number">Number</string>
    <string name="property_street">Street</string>
    <string name="property_postal_code">Postal code</string>
    <string name="property_city">City</string>
    <string name="property_description">Description</string>
    <string name="property_listed_date">Listed on:</string>
    <string name="property_sold_date">Sold on:</string>
    <string name="property_agent">Real estate agent:</string>
    <string name="property_successfully_created">New property has been successfully created</string>
    <string name="property_successfully_updated">Property has been successfully updated</string>
    <string name="property_not_correct">Property fields are not correct</string>
    <string name="property_poi">Points of interest</string>
    <string name="property_poi_swimming_pool">Swimming pool</string>
    <string name="property_poi_school">Near schools</string>
    <string name="property_poi_shopping">Near shopping</string>
    <string name="property_poi_parking">Parking</string>
    <string name="property_no_match">No property match your search</string>
    <string name="property_at_least_one_picture">You must provide at least one picture</string>
    <string name="property_search_no_result">Your search criteria returned no results</string>
    <string name="property_no_selection">Select a property</string>

    <!-- Property picture -->
    <string name="picture_is_main">Main picture</string>
    <string name="picture_add_new">Add a new picture</string>
    <string name="picture_select_camera_or_library">Select camera or library</string>
    <string name="picture_description">Description</string>

    <!-- Property type -->
    <string-array name="property_types" >
        <item>Apartment</item>
        <item>House</item>
        <item>Penthouse</item>
        <item>Loft</item>
        <item>Mansion</item>
        <item>Villa</item>
    </string-array>

    <!-- Buttons -->
    <string name="button_save">Save</string>
    <string name="button_search">Search</string>
    <string name="button_calculate">Calculate</string>

    <!-- Currency Converter -->
    <string name="currency_euros">Euros</string>
    <string name="currency_dollars">Dollars</string>

    <!-- Loan simulator -->
    <string name="loan_amount">Loan amount</string>
    <string name="loan_interest_rate">Interest rate</string>
    <string name="loan_duration">Duration (Years)</string>
    <string name="loan_monthly_payment">Monthly payment :</string>
    <string name="loan_credit_cost">Credit cost :</string>

    <!-- Titles -->
    <string name="title_pick_a_date">Pick a date</string>

    <!-- Network -->
    <string name="no_network">There is no network connection right now</string>
</resources>
