<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_medium">

    <ImageView
        android:id="@+id/converter_icon"
        android:layout_width="@dimen/icon_large"
        android:layout_height="@dimen/icon_large"
        android:layout_marginTop="@dimen/margin_default"
        android:contentDescription="@string/property_address"
        android:src="@drawable/ic_baseline_swap_horizontal_circle_24"
        android:tint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dollar_layout"
        style="@style/AppTheme.textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
        android:hint="@string/currency_dollars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/converter_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dollar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/euro_layout"
        style="@style/AppTheme.textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        app:startIconDrawable="@drawable/ic_baseline_euro_24"
        android:hint="@string/currency_euros"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dollar_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/euro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>